# aws-fastapi-lambda

./: .gitignore  Makefile  README.md  cdk.context.json  cdk.json  deploy_backend.sh  important_commands.sh  pyproject.toml  requirements.txt
.github/prerequisites/: README.md  github-actions-oidc-federation-and-role.yml
.github/workflows/: deploy.yml
assets/: aws_cdk_fastapi_lambda.drawio
cdk/: add_tags.py  app.py
cdk/stacks/: cdk_lambda_fastapi_stack.py
lambda-layers/: Makefile
lambda-layers/fastapi/: Makefile  requirements.txt
src/lambdas/api/: main.py
terraform/: .terraform.lock.hcl  backend.tf  lambda.tf  variables.tf
tests/unit/cdk/: test_cdk_lambda_fastapi.py
tests/unit/lambdas/: conftest.py
tests/unit/lambdas/api/: test_main.py
