[tool.poetry]
name = "aws-cdk-fastapi-lambda"
version = "0.0.1"
description = "Sample project to illustrate a real quick FastAPI deployment on Lambda Functions"
authors = ["Santiago Garcia Arango <san99tiago@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "2.83.1"
constructs = ">=10.0.0,<11.0.0"

[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = {extras = ["all"], version = "^2.16.2"}
boto3 = "^1.26.153"
poethepoet = "^0.20.0"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
coverage = "^7.2.7"
moto = "^4.1.11"
fastapi = {extras = ["all"], version = "^0.98.0"}
mangum = "^0.17.0"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [
    "cdk",
    "src/lambdas",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
local-fastapi = "uvicorn src.lambdas.api.main:app --reload"
test-unit = ["_make","_test_unit", "_coverage_html"]
test-unit-lambdas = ["_test_unit_lambdas", "_coverage_html"]
test-unit-cdk = ["_make","_test_unit_cdk", "_coverage_html"]
black-format = "black ."
black-check = "black . --check --diff -v"
_make = "make all"
_test_unit = "coverage run -m pytest tests/unit"
_test_unit_lambdas = "coverage run -m pytest tests/unit/lambdas"
_test_unit_cdk = "coverage run -m pytest tests/unit/cdk"
_coverage_html = "coverage html"

[tool.coverage.run]
branch = true
source = ["src", "cdk"]
omit = [
    "**/__init__.py"
]

[tool.coverage.report]
show_missing = false
