[tool.poetry]
name = "aws-fastapi-lambda"
version = "1.0.0"
description = "Sample project to illustrate a real quick FastAPI deployment on Lambda Functions"
authors = ["Santiago Garcia Arango <san99tiago@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-cdk-lib = "2.130.0"
constructs = ">=10.0.0,<11.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
coverage = "^7.4.0"
black = "^23.12.1"
boto3 = "^1.34.14"
moto = "^4.2.13"
aws-lambda-powertools = {version = "^2.31.0"}
fastapi = {extras = ["all"], version = "^0.109.0"}
mangum = "^0.17.0"
pydantic = "^2.5.3"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = [
    "cdk",
    "src/lambdas",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
local-fastapi = "uvicorn src.lambdas.api.main:app --reload"
test-unit = ["_make","_test_unit", "_coverage_html"]
test-unit-lambdas = ["_test_unit_lambdas", "_coverage_html"]
test-unit-cdk = ["_make","_test_unit_cdk", "_coverage_html"]
black-format = "black ."
black-check = "black . --check --diff -v"
_make = "make all"
_test_unit = "coverage run -m pytest tests/unit"
_test_unit_lambdas = "coverage run -m pytest tests/unit/lambdas"
_test_unit_cdk = "coverage run -m pytest tests/unit/cdk"
_coverage_html = "coverage html"

[tool.coverage.run]
branch = true
source = ["src", "cdk"]
omit = [
    "**/__init__.py"
]

[tool.coverage.report]
show_missing = false
